name:               s-expression
version:            0.3
cabal-version:	    >= 1.2
synopsis:           S-expression printer and parser 
description:        Modular parser and printer for S-expressions, including
                    Ron Rivest's Canonical S-expressions, which are used in 
                    SDSI and SPKI.
                    
                    Relatively easy to extend to cover other s-expr-based 
                    formats such as lisp/scheme source, HLA OMDT documents,
                    etc.
                    
                    Loosely based on Brian Sniffen's \"sexpr\" package
                    with a different core data type.
                    
category:           Data, Codec
license:            BSD3
license-file:       LICENSE
author:             Brian Sniffen, James Cook
maintainer:         james.cook@usma.edu
build-type:         Simple

flag base4
    description: use base package as split at time of base-4 release.
    default: True

flag testing
    description: build test executable
    default: False

library
    if flag(testing)
       ghc-options:         -Wall
    if flag(base4)
      Build-Depends:        base >=4 && <5, syb
    else
      Build-Depends:        base >=3 && <4
    
    Build-Depends:          base64-string,
                            binary,
                            bytestring,
                            mtl,
                            pretty,
                            parsec >= 3
                            
    hs-source-dirs:         src
    Exposed-modules:        Text.SExpr
                            Text.SExpr.Convert
    other-modules:          Text.SExpr.Parse
                            Text.SExpr.Print
                            Text.SExpr.Convert.Classes
                            Text.SExpr.Convert.Instances
                            Text.SExpr.Type

executable sexpr-test
    if !flag(testing)
        buildable:          False
        ghc-options:        -Wall
    hs-source-dirs:         tests, src
    main-is:                Tests.hs
    build-depends:          random,
                            QuickCheck < 2.1
