name:                sexpr
version:             0.2.1
cabal-version:	     >= 1.2
synopsis:            S-expression printer and parser 
description:         Parser and printer for S-expressions, including Ron 
		     Rivest's Canonical S-expressions.  These are used in 
		     SDSI and SPKI, and are generally useful for 
		     cryptographic operations over structured data.
category:            Codec
license:             BSD3
license-file:        LICENSE
author:              Brian Sniffen
maintainer:          bts@evenmere.org
build-type: 	     Simple

flag testing
    description: build test executable
    default: False

library
    if flag(testing)
       ghc-options: -Wall
    Build-Depends: base, base64-string, mtl, pretty, bytestring, binary, parsec >= 3
    Exposed-modules:    Codec.Sexpr
                        Codec.Sexpr.Compat
    other-modules:      Codec.Sexpr.Compat.Internal
                        Codec.Sexpr.Compat.Parser
                        Codec.Sexpr.Compat.Printer
                        Codec.Sexpr.Parser
                        Codec.Sexpr.Printer
                        Codec.Sexpr.Type

executable sexpr-test-compat
    if !flag(testing)
        buildable: False
        ghc-options: -Wall
    main-is: Codec/Sexpr/Compat/Tests.hs
    build-depends: QuickCheck, random

executable sexpr-test
    if !flag(testing)
        buildable: False
        ghc-options: -Wall
    main-is: Codec/Sexpr/Tests.hs
    build-depends: QuickCheck, random

